Remove traces of IGV screenshots